@@ -144,47 +144,48 @@
               </execution>
             </executions>
           </plugin>
-<!--          <plugin>-->
-<!--            <groupId>org.apache.maven.plugins</groupId>-->
-<!--            <artifactId>maven-surefire-plugin</artifactId>-->
-<!--            <dependencies>-->
-<!--              <dependency>-->
-<!--                <groupId>org.ow2.asm</groupId>-->
-<!--                <artifactId>asm</artifactId>-->
-<!--                <version>9.1</version>-->
-<!--              </dependency>-->
-<!--            </dependencies>-->
-<!--            <version>2.22.2</version>-->
-<!--            <configuration>-->
-<!--              <excludes>-->
-<!--                <exclude>**/integration/**/*.java</exclude>-->
-<!--              </excludes>-->
-<!--              <argLine>-->
-<!--                -javaagent:${user.home}/.m2/repository/org/jacoco/org.jacoco.agent/0.8.6/org.jacoco.agent-0.8.6-runtime.jar=destfile=target/jacoco.exec-->
-<!--                &#45;&#45;add-opens=com.spme.fantasolver/unit.dao=ALL-UNNAMED-->
-<!--                &#45;&#45;add-opens=com.spme.fantasolver/unit.controllers=ALL-UNNAMED-->
-<!--                &#45;&#45;add-opens=com.spme.fantasolver/unit.utility=ALL-UNNAMED-->
-<!--                &#45;&#45;add-opens=com.spme.fantasolver/unit.entity=ALL-UNNAMED-->
-<!--              </argLine>-->
-<!--            </configuration>-->
-<!--            <executions>-->
-<!--              <execution>-->
-<!--                <id>integration-test</id>-->
-<!--                <goals>-->
-<!--                  <goal>test</goal>-->
-<!--                </goals>-->
-<!--                <phase>integration-test</phase>-->
-<!--                <configuration>-->
-<!--                  <excludes>-->
-<!--                    <exclude>none</exclude>-->
-<!--                  </excludes>-->
-<!--                  <includes>-->
-<!--                    <include>**/integration/*.java</include>-->
-<!--                  </includes>-->
-<!--                </configuration>-->
-<!--              </execution>-->
-<!--            </executions>-->
-<!--          </plugin>-->
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <dependencies>
+              <dependency>
+                <groupId>org.ow2.asm</groupId>
+                <artifactId>asm</artifactId>
+                <version>9.1</version>
+              </dependency>
+            </dependencies>
+            <version>2.22.2</version>
+            <configuration>
+              <excludes>
+                <exclude>**/integration/**/*.java</exclude>
+                <exclude>**/unit/**/*.java</exclude>
+              </excludes>
+              <argLine>
+                -javaagent:${user.home}/.m2/repository/org/jacoco/org.jacoco.agent/0.8.6/org.jacoco.agent-0.8.6-runtime.jar=destfile=target/jacoco.exec
+                --add-opens=com.spme.fantasolver/unit.dao=ALL-UNNAMED
+                --add-opens=com.spme.fantasolver/unit.controllers=ALL-UNNAMED
+                --add-opens=com.spme.fantasolver/unit.utility=ALL-UNNAMED
+                --add-opens=com.spme.fantasolver/unit.entity=ALL-UNNAMED
+              </argLine>
+            </configuration>
+            <executions>
+              <execution>
+                <id>integration-test</id>
+                <goals>
+                  <goal>test</goal>
+                </goals>
+                <phase>integration-test</phase>
+                <configuration>
+                  <excludes>
+                    <exclude>none</exclude>
+                  </excludes>
+                  <includes>
+                    <include>**/integration/*.java</include>
+                  </includes>
+                </configuration>
+              </execution>
+            </executions>
+          </plugin>
 <!--          <plugin>-->
 <!--            <groupId>org.jacoco</groupId>-->
 <!--            <artifactId>jacoco-maven-plugin</artifactId>-->
